--- a/public/app.css
+++ b/public/app.css
@@ -12,6 +12,7 @@ article {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 70%
 }
 
 h1 {
@@ -39,4 +40,3 @@ h1 {
 span > a {
     text-decoration: none;
 }
-
